# IOS_App_S3_P5

./: .clangd  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/led_panel/: led_panel.cpp
main/: CMakeLists.txt  Kconfig.projbuild  clock_alarm.cpp  clock_alarm.h  clock_button_logic.cpp  clock_button_logic.h  clock_buttons.cpp  clock_buttons.h  clock_display.cpp  clock_display.h  clock_ethernet.cpp  clock_ethernet.h  clock_logo_manager.cpp  clock_logo_manager.h  clock_mdns.cpp  clock_mdns.h  clock_menu.cpp  clock_menu.h  clock_menu_model.cpp  clock_menu_model.h  clock_modes.h  clock_network.cpp  clock_network.h  clock_network_core.cpp  clock_ota.cpp  clock_ota.h  clock_ota_core.cpp  clock_ota_core.h  clock_palette.cpp  clock_palette.h  clock_protocol.cpp  clock_protocol.h  clock_protocol_stream.cpp  clock_protocol_stream.h  clock_sd_card.cpp  clock_sd_card.h  clock_settings.cpp  clock_settings.h  clock_wifi.cpp  clock_wifi.h  (+4 more)
tests/: alarm_change_detection_test.cpp  alarm_test_stubs.cpp  button_logic_test.cpp  clock_ota_core_test.cpp  network_mode_test.cpp  network_settings_test_stubs.cpp  palette_manager_test.cpp  palette_protocol_test.cpp  palette_test_stubs.cpp  protocol_test_stubs.cpp  run_alarm_change_detection_tests.sh  run_button_logic_tests.sh  run_clock_ota_core_tests.sh  run_network_mode_tests.sh  run_palette_manager_tests.sh  run_palette_protocol_tests.sh
tests/stubs/: clock_display.h  clock_logo_manager.h  clock_menu.h  clock_modes.h  ds3231.h  esp_err.h  esp_log.h  hub75.h  nvs.h  nvs_flash.h
tests/stubs/driver/: gpio.h
tests/stubs/freertos/: FreeRTOS.h  portmacro.h  queue.h  semphr.h
tools/: palette_tcp_test.py
